--- a/portstyle.css
+++ b/portstyle.css
@@ -1,6 +1,8 @@
 :root {
   --dark: rgb(36, 36, 36);
   --white: #f1f1f1;
+  --bgdark: rgba(255, 255, 255, 0.05);
+  --bxshadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 }
 
 * {
@@ -8,22 +10,14 @@
   padding: 0;
 }
 
-/* .mainbg {
-  background-image: url("./images/dark1.png");
-  background-color: black;
-  position: absolute;
-} */
-
 .bgimg {
   height: 100%;
   width: 100%;
   position: fixed;
   z-index: -1;
-  /* background-image: url("./images/dark.png"); */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  /* background-color: black; */
 }
 
 .main {
@@ -40,7 +34,7 @@ p {
   position: fixed;
   z-index: 1;
   background: rgba(255, 255, 255, 0.03);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--bxshadow);
   backdrop-filter: blur(5.6px);
   -webkit-backdrop-filter: blur(5.6px);
 }
@@ -49,9 +43,9 @@ p {
   width: 80%;
   padding: 60px;
   margin-bottom: 60px;
-  background: rgba(255, 255, 255, 0.05);
+  background: var(--bgdark);
   border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--bxshadow);
   backdrop-filter: blur(5.6px);
   -webkit-backdrop-filter: blur(5.6px);
 }
@@ -59,9 +53,9 @@ p {
 .langglass {
   width: 200px;
   margin: 20px;
-  background: rgba(255, 255, 255, 0.05);
+  background: var(--bgdark);
   border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--bxshadow);
   backdrop-filter: blur(5.6px);
   -webkit-backdrop-filter: blur(5.6px);
   padding: 40px;
@@ -80,9 +74,9 @@ p {
 }
 
 .navlist:hover {
-  background: rgba(255, 255, 255, 0.05);
+  background: var(--bgdark);
   border-radius: 20px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--bxshadow);
   backdrop-filter: blur(5.6px);
   -webkit-backdrop-filter: blur(5.6px);
 }
@@ -95,14 +89,14 @@ p {
 .mode:hover {
   background: rgba(255, 255, 255, 0.05);
   border-radius: 20px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--bxshadow);
   backdrop-filter: blur(5.6px);
   -webkit-backdrop-filter: blur(5.6px);
 }
 
 .footer {
   background: rgba(255, 255, 255, 0.03);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--bxshadow);
   backdrop-filter: blur(5.6px);
   -webkit-backdrop-filter: blur(5.6px);
   height: fit-content;
